--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     container_name: "django_kakeibo"
     platform: linux/amd64
     build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: sh -c "sleep 5; python3 manage.py migrate; python3 manage.py runserver 0.0.0.0:8000"
     working_dir: /code
     volumes:
       - .:/code
