--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  KakeiboDB.volume:
 services:
   db:
     container_name: KakeiboDB
@@ -40,7 +42,7 @@ services:
     container_name: "django_kakeibo"
     platform: linux/amd64
     build: .
-    command: sh -c "sleep 5; python3 manage.py migrate; python3 manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python3 manage.py migrate; python3 manage.py runserver 0.0.0.0:8000"
     working_dir: /code
     volumes:
       - .:/code
